# FlaskProject

./: .dockerignore  .env.example  .env.prod  .flake8  .gitignore  .trivyignore  Dockerfile  Dockerfile.dev  Dockerfile.test  Makefile  PROJECT_SNAPSHOT.md  README.md  alembic.ini  app.py  before_fix.dump  build_postgres_url.py  check_injection.py  config.py  create_db.py  db_issue.py  debug_psycopg_connect.py  docker-compose.dev.yml  docker-compose.dev_db.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.test_db.yml  docker-compose.yml  entrypoint.sh  flask_passwords.kdbx  inspect_specific_db.py  inspect_tmpdb.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.txt  scan_dbs_for_injection.py  sitecustomize.py  trivy.yaml  (+1 more)
.github/workflows/: ci-cd.yml  ci-test-build-scan-push.yml  snapshot.yml  test_snapshot_build.yml
app/: __init__.py  comman_utils.py  models.py  routes.py  utils.py
app/blueprints/: main.py
app/services/: users_service.py
app/static/: style.css
app/templates/: about.html  base.html  dashboard.html  flash.html  index.html  ui.html
app/utils/: validation.py
ci/: recreate_and_test.sh  run-tests.sh  strip-sqlite.sh
docs/: project_documentation.md
migrations/: env.py
migrations/versions/: 394b9460c6c0_increase_password_hash_length.py  3e239b0281ed_initial_migration.py  8c3d85d09116_set_created_at_default.py  (+1 more)
tests/: conftest.py  conftest_pg.py  pytest.ini  test_critical.py  test_major.py  test_routes.py  test_user_validation.py  test_users.py
tools/: snapshot_generator.py
(+18 files in other folders)
